@@ -310,6 +310,9 @@ Release 2.2.0 - UNRELEASED
     HADOOP-9703.  org.apache.hadoop.ipc.Client leaks threads on stop.
     (Tsuyoshi OZAWA vi Colin Patrick McCabe)
 
+    HADOOP-9618.  Add thread which detects GC pauses.
+    (Todd Lipcon via Colin Patrick McCabe)
+
   OPTIMIZATIONS
 
   BUG FIXES
